using System;
using System.Collections.Generic;
using System.Text;

namespace Soul_Talk.Persistence__Repositories_
{
    public class CaseOfficerRepository
    {
    }
}
