using System;
using System.Collections.Generic;
using System.Text;

namespace Soul_Talk.ViewModel
{
    public class MainViewModel
    {
    }
}
