CREATE TABLE GUEST (
	GuestID INT			  NOT NULL IDENTITY(1,1),
	Name NVARCHAR(50)	  NOT NULL,
	Email NVARCHAR(50)    NOT NULL,
	Phone NVARCHAR(12)			  ,
	ConsentStatus BIT	  NOT NULL,
	PodcastEpisodeID INT  NOT NULL,
	CitizenID INT		  NOT NULL,

	CONSTRAINT PK_GUEST PRIMARY KEY (GuestID),

	CONSTRAINT FK_GUEST_PODCASTEPISODE
       FOREIGN KEY (PodcastEpisodeID) REFERENCES PODCASTEPISODE(PodcastEpisodeID),

	CONSTRAINT FK_GUEST_CITIZEN
		FOREIGN KEY (CitizenID) REFERENCES Citizen(CitizenID)
);

CREATE TABLE CITIZEN (
	CitizenID INT			  NOT NULL IDENTITY(1,1),
	Name NVARCHAR(50)		  NOT NULL,
	CPRNumber NVARCHAR(10)    NOT NULL UNIQUE,
	WorkStatus NVARCHAR(50)   NOT NULL,
	WorkType NVARCHAR(50)	  NOT NULL,	  
	ConsentStatus BIT		  NOT NULL,
	CurrentStatus NVARCHAR(50)NOT NULL,
	SpecialConsiderations NVARCHAR(255)	  ,
	CaseOfficerId INT 		  NOT NULL,

	CONSTRAINT PK_CITIZEN PRIMARY KEY (CitizenId),
	CONSTRAINT FK_CITIZEN_CASEOFFICER
		FOREIGN KEY (CaseOfficerId) REFERENCES CaseOfficer(CaseOfficerId)
);

CREATE TABLE CASEOFFICER (
	CaseOfficerId INT	      NOT NULL IDENTITY(1,1),
	Name NVARCHAR(50)		  NOT NULL,
	Department NVARCHAR(50)	  NOT NULL,
	Email NVARCHAR(50)		  NOT NULL,
	Phone NVARCHAR(12)		  NOT NULL,
	LocalAuthorityId INT	  NOT NULL,
	CONSTRAINT PK_CASEOFFICER PRIMARY KEY (CaseOfficerId),
	CONSTRAINT FK_CASEOFFICER_LOCALAUTORITY
		FOREIGN KEY (LocalAuthorityId) REFERENCES LocalAuthority(LocalAuthorityId)
);

CREATE TABLE PODCASTEPISODE (
	PodcastEpisodeID INT		  NOT NULL IDENTITY(1,1),
	Title NVARCHAR(100)			  NOT NULL,
	Status NVARCHAR(50)			  NOT NULL,
	Duration TIME			      NOT NULL,
	MeetingPlace NVARCHAR(100)	  NOT NULL,
	Note NVARCHAR(255)			  ,
	GuestId INT					  NOT NULL,
	CaseOfficerId INT		      NOT NULL,

	CONSTRAINT PK_PODCASTEPISODE PRIMARY KEY (PodcastEpisodeID),
	CONSTRAINT FK_PODCASTEPISODE_GUEST
		FOREIGN KEY (GuestId) REFERENCES Guest(GuestID),
	CONSTRAINT FK_PODCASTEPISODE_CASEOFFICER
		FOREIGN KEY (CaseOfficerId) REFERENCES CaseOfficer(CaseOfficerId)
);

