@startuml DCD - Soul&Talk
skinparam classAttributeIconSize 0
left to right direction


package "ViewModels (Application)"{
    class MainViewModel {
        - CaseOfficerRepository : CaseOfficerRepository
        - CitizenRepository : CitizenRepository
        - LocalAuthorityRepository : LocalAuthorityRepository
        - PodcastEpisodeRepository : PodcastEpisodeRepository
        + MainViewModel(CaseOfficerRepository : CaseOfficerRepository, 
        CitizenRepository : CitizenRepository, LocalAuthorityRepository : LocalAuthorityRepository, 
        PodcastEpisodeRepository : PodcastEpisodeRepository)
    }
}


package "Persistence (Repositories)" {

class IRepository {
    + Add()
    + FindById(id: int)
    + Update()
    + Delete()
    + Edit()
}
 
class GuestRepository{

- «readonly» connectionString : string
- guest : Guest[0..*]
+ CreateGuest()
}

class CaseOfficerRepository{
 - «readonly» connectionString : string
    - caseOfficer : CaseOfficer[0..*]
}

class CitizenRepository{
 - «readonly» connectionString : string
    - citizen : Citizen[0..*]
}

class LocalAuthorityRepository{
 - «readonly» connectionString : string
    - localAuthority : LocalAuthority[0..*]
}

class PodcastEpisodeRepository{
 - «readonly» connectionString : string
    - podcastEpisode : PodcastEpisode[0..*]
}

}

package "Models (Domain)" {
class LocalAuthority {
    - localAuthorityId : int
    - localAuthorityName : String
    - eanNumber : String

     + <<constructor>> LocalAuthority(id : int)
}

class CaseOfficer {
    + caseOfficerId : int
    + name : String
    + department : String
    - phone : String
    - email : String
    
     + <<constructor>> CaseOfficer(id : int)
}

class PodcastEpisode {
    + podcastEpisodeId : int
    + title : String
    + date : Date
    + duration : Time
    - status : String
    - meetingPlace : String
    - note : String

    + <<constructor>> PodcastEpisode(id : int)
}

class Citizen {
    + citizenId : int
    + name : String
    - cprNumber : String
    - workStatus : String
    - workType : String
    - consentStatus : String
    - currentStatus : String
    - specialConsiderations : String

    + <<constructor>> Citizen(id : int)
}

class Guest {
    + guestId : int
    + name : String
    - phone : String
    - email : String
    + consentStatus : bool

     + <<constructor>> Guest(id : int)
}


MainViewModel .. CaseOfficerRepository
MainViewModel .. CitizenRepository
MainViewModel .. LocalAuthorityRepository
MainViewModel .. PodcastEpisodeRepository
MainViewModel .. GuestRepository

CaseOfficerRepository .. CaseOfficer
CitizenRepository .. Citizen
LocalAuthorityRepository .. LocalAuthority
PodcastEpisodeRepository .. PodcastEpisode
GuestRepository .. Guest

PodcastEpisode "0..*" -- "1..*" Guest
CaseOfficer "1" -- "0..*" PodcastEpisode
Citizen "  1" -- "  1" Guest
CaseOfficer "0..*" -- "1"LocalAuthority
CaseOfficer "1" -- "0..*"Citizen

}
hide circle
@enduml